--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -19,7 +19,7 @@
                     <h1 class="text-center mt-4">Connexion</h1>
 
                     <label class="my-2" for="inputPseudo">Pseudo</label>
-                    <input type="pseudo" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control" required autofocus>
+                    <input type="text" value="{{ last_username }}" name="pseudo" id="inputPseudo" class="form-control" required autofocus>
                     <label class="my-2" for="inputPassword">Mot de passe</label>
                     <input type="password" name="password" id="inputPassword" class="form-control" required>
 
