Mise à jour DefaultController

--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -33,7 +33,7 @@
                                 <img class="img-fluid" src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
                                 <!-- Category -->
                                 <div class="price-start">
-                                    <p>Culture</p>
+                                    <p>{{ category.name}}</p>
                                 </div>
                                 <div class="feature-content d-flex align-items-center justify-content-between">
                                     <div class="feature-title">
