--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,7 @@
                                 {% endif %}
 
                                 {% if is_granted('ROLE_USER') %}
-                                    | <a href="#">Mon Dashboard</a>
+                                     <a href="#">Mon Dashboard</a>
                                 {% endif %}
 
                             </div>
