--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -33,15 +33,22 @@
                                 <a class="nav-link" href="{{ path('default_contact') }}">Contact</a>
                             </li>
                         </ul>
-                        <!-- Signin btn -->
 
-                        <div class="dorne-signin-btn ml-auto">
-                            <a href="{{ path('app_login') }}" class="btn dorne-btn">Connexion</a>
-                        </div>
+                        <!-- LogIn LogOut Register-->
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                            <a href="{{ path('app_logout') }}" class=" btn dorne-btn ">DECONNEXION</a>
+                        {% else %}
+                        <!-- Signin btn -->
+                            <div class="dorne-signin-btn ml-auto">
+                                <a href="{{ path('app_login') }}" class="btn  btn-dark text-white">Connexion</a>
+                            </div>
                         <!-- Register btn -->
                         <div class="dorne-signin-btn">
                             <a href="{{ path('user_register') }}" class="btn dorne-btn">Enregistrement</a>
                         </div>
+                        {% endif %}
+
+
                         <!-- Add listings btn
                         <div class="dorne-add-listings-btn">
                             <a href="#" class="btn dorne-btn">+ Add Listings</a>
