test mise en place map

--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -40,7 +40,7 @@
                         {% else %}
                         <!-- Signin btn -->
                             <div class="dorne-signin-btn ml-auto">
-                                <a href="{{ path('app_login') }}" class="btn  btn-dark text-white">Connexion</a>
+                                <a href="{{ path('app_login') }}" class="btn dorne-btn ">Connexion</a>
                             </div>
                         <!-- Register btn -->
                         <div class="dorne-signin-btn">
