Revert "test mise en place map"
This reverts commit 91d5f72ca28fc33760407a6ba47580c6c3247d5d.

--- a/templates/default/explore.html.twig
+++ b/templates/default/explore.html.twig
@@ -140,7 +140,7 @@
 {% block scripts %}
     {{ parent() }}
     <!-- Google Maps js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBppR3tyGzWbuXGbySTMp_XqCoOzdohqms&callback=initMap"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBppR3tyGzWbuXGbySTMp_XqCoOzdohqms"></script>
     <script src="{{ asset('js/google-map/location-map-active.js') }}"></script>
 
 {% endblock %}
