--- a/templates/default/explore.html.twig
+++ b/templates/default/explore.html.twig
@@ -3,13 +3,11 @@
 {% block title %}
     Explore
 {% endblock %}
-{% block stylesheets %}
-    {{ parent() }}
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
-{% endblock %}
+
 
 {% block content %}
-
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.js"></script>
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.css" rel="stylesheet" />
 <!-- ***** Breadcumb Area Start ***** -->
     <div class="breadcumb-area bg-img bg-overlay" style="background-image: url({{ asset('img/bg-img/hero-1.jpg') }})"></div>
     <!-- ***** Breadcumb Area End ***** -->
@@ -29,7 +27,7 @@
                 <!-- Tabs Content -->
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
-                        <form action="#" method="get">
+                        <form action="#" method="post">
 
                             <select class="custom-select" id="categories">
                                 <option selected>Toutes les Catégories</option>
@@ -122,21 +120,19 @@
             </div>
         </div>
     </section>
+    <!-- Script MAP -->
 
-
+    <script>
+        mapboxgl.accessToken = 'pk.eyJ1IjoiY2hhYmluZXZpYnoiLCJhIjoiY2szenk4enAxMjAxaDNscWx5MjFtYTE4ZyJ9.2mxGbAQIffpHKpGUphvYVA';
+        var map = new mapboxgl.Map({
+            container: 'exploreGoogleMap',
+            style: 'mapbox://styles/mapbox/streets-v11',
+            center: [-74.5, 40], // starting position [lng, lat]
+            zoom: 9 // starting zoom
+        });
+    </script>
 
 {% endblock %}
 
 
-    {% block scripts %}
-        {{ parent() }}
-        <!-- Google Maps js -->
-        <script>
-            mapboxgl.accessToken = 'pk.eyJ1IjoiY2hhYmluZXZpYnoiLCJhIjoiY2szenk4enAxMjAxaDNscWx5MjFtYTE4ZyJ9.2mxGbAQIffpHKpGUphvYVA';
-            var map = new mapboxgl.Map({
-                container: 'exploreGoogleMap',
-                style: 'mapbox://styles/mapbox/streets-v11'
-            });
-        </script>
-    {% endblock %}
 
