--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -56,8 +56,8 @@
         <!-- Hero Social Btn -->
         <div class="hero-social-btn">
             <div class="social-title d-flex align-items-center">
-                <h6>Suivez-nous</h6>
-                <span>Every where, every time</span>
+                <h6>Suivez - Nous ! </h6>
+                <span></span>
             </div>
             <div class="social-btns">
                 <a href="#"><i class="fa fa-linkedin" aria-haspopup="true"></i></a>
@@ -144,7 +144,7 @@
                             <!-- Single Site Area -->
                             {% for site in sites %}
                             <div class="single-features-area">
-                                <img src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
+                                <img class="img-fluid" width="413" height="275" src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
                                 <!-- Rating & Map Area -->
                                 <div class="ratings-map-area d-flex">
                                     <a href="#">8.5</a>
