--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -20,7 +20,7 @@
     <script>
         $('.dropify').dropify({
             messages: {
-                default: 'Glissez-d&eacute;posez un fichier ici ou cliquez',
+                default: 'Glissez-d&eacute;ppour ajouter un avatar ou cliquez',
                 replace: 'Glissez-d&eacute;posez un fichier ou cliquez pour remplacer',
                 remove:  'Supprimer',
                 error:   'D&eacute;sol&eacute;, le fichier est trop volumineux'
